# judo

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: docs.doctree  environment.pickle  index.doctree
.doctrees/api/common/: index.doctree
.doctrees/api/controllers/: index.doctree
.doctrees/api/judo/: index.doctree
.doctrees/api/mujoco_helpers/: index.doctree
.doctrees/api/planner/: index.doctree
.doctrees/api/tasks/: index.doctree
.doctrees/api/viser_app/: index.doctree
.doctrees/api/visualizers/: index.doctree
.dvc/: config
.github/: CODEOWNERS
.github/workflows/: code_checks.yml  docs.yml  precommit.yml  pypi_publish.yml  test.yml  update_dev_deps.yml
.hooks/: python_headers.py
_modules/: index.html
_modules/judo/cli/: index.html
_modules/judo/config/: index.html
_modules/judo/gui/: index.html
_modules/judo/optimizers/: index.html
_modules/judo/tasks/: index.html
_sources/api/common/: index.rst.txt
_sources/api/controllers/: index.rst.txt
_sources/api/judo/: index.rst.txt
_sources/api/mujoco_helpers/: index.rst.txt
_sources/api/planner/: index.rst.txt
_sources/api/tasks/: index.rst.txt
_sources/api/viser_app/: index.rst.txt
_sources/api/visualizers/: index.rst.txt
api/: index.html
api/common/: index.html
api/common/path_resolvers/: index.html
api/common/paths/: index.html
api/controllers/: index.html
api/controllers/controller/: index.html
api/controllers/sampling/: index.html
api/controllers/sampling_base/: index.html
api/judo/: index.html
api/judo/app/: index.html
api/judo/cli/: index.html
api/judo/config/: index.html
api/judo/controller/: index.html
api/judo/gui/: index.html
api/judo/optimizers/: index.html
api/judo/simulation/: index.html
api/judo/tasks/: index.html
api/judo/utils/: index.html
api/judo/visualizers/: index.html
api/mujoco_helpers/: index.html
api/mujoco_helpers/utils/: index.html
api/planner/: index.html
api/planner/core/: index.html
api/planner/dynamics/: index.html
api/planner/experts/: index.html
api/tasks/: index.html
api/tasks/acrobot/: index.html
api/tasks/cartpole/: index.html
api/tasks/cost_functions/: index.html
api/tasks/cylinder_push/: index.html
api/tasks/mujoco_task/: index.html
api/tasks/spot/: index.html
api/tasks/spot_base/: index.html
api/tasks/task/: index.html
api/viser_app/: index.html
api/viser_app/app/: index.html
api/viser_app/constants/: index.html
api/viser_app/gui/: index.html
api/viser_app/io/: index.html
api/viser_app/json_serializer/: index.html
api/viser_app/path_utils/: index.html
api/viser_app/profiler/: index.html
api/visualizers/: index.html
api/visualizers/meshcat/: index.html
api/visualizers/model/: index.html
api/visualizers/mujoco/: index.html
api/visualizers/mujoco_helpers/: index.html
api/visualizers/viser_app/: index.html
api/visualizers/visualization/: index.html
docs/: index.html
docs/source/: conf.py  index.md  quickstart.md
docs/source/interface/: config_registration.md  intro.md  tasks.md
faq/: index.html
genindex/: index.html
interface/: index.html
interface/config_registration/: index.html
interface/config_with_hydra/: index.html
interface/gui/: index.html
interface/intro/: index.html
interface/optimizers/: index.html
interface/overrides/: index.html
interface/tasks/: index.html
judo/: __init__.py  cli.py  config.py  gui.py  logging_util.py
judo/app/: controller.py  controller_data.py  simulation.py  visualization.py
judo/app/data/: controller_data.py  (+2 more)
judo/configs/: judo_default.yaml  judo_dora_default.yaml
judo/controller/: __init__.py  batched_spot_locomotion.py  controller.py  overrides.py
judo/models/: .gitignore  meshes.dvc  policies.dvc
judo/optimizers/: __init__.py  base.py  cem.py  overrides.py
judo/rollout/: __init__.py  base.py  mjc.py  mjw.py
judo/simulation/: __init__.py  base.py  mj_simulation.py  policy_mj_simulation.py
judo/tasks/: README.md  __init__.py  base.py  caltech_leap_cube.py  cartpole.py  cylinder_push.py  cylinder_push_new.py  fr3_pick.py  leap_cube.py  leap_cube_down.py
judo/unlocked/: __init__.py  annotation.py  const.py  input_stage.py  ipc_utils.py  node.py  output_stage.py  policy.py  queue.py  schedule.py  shmque.py
judo/utils/: assets.py  fields.py  mj_rollout_backend.py  mjwarp_rollout_backend.py  mujoco.py  mujoco_new.py  normalization.py  patch.py  policy_mj_rollout_backend.py  registration.py  rollout.py  rollout_backend.py
judo/visualizers/: model.py  utils.py  visualizer.py
mujoco_extensions/: CMakeLists.txt  __init__.py
mujoco_extensions/example/: run_closed_loop_rollout.cpp  run_physics_rollout.py  run_threaded_rollout.py
mujoco_extensions/jacobian_smoothing/: __init__.py
mujoco_extensions/jacobian_smoothing/pybind/: jacobian_smoothing.cpp  pybind.cpp
mujoco_extensions/jacobian_smoothing/test/: test_jacobian_smoothing.py
mujoco_extensions/onnx_interface/: onnx_interface.cpp
mujoco_extensions/onnx_interface/script/: benchmark_onnx_torch.cpp
mujoco_extensions/onnx_interface/test/: test_onnx_interface.cpp
mujoco_extensions/policy_rollout/: __init__.py
mujoco_extensions/policy_rollout/pybind/: policy_rollout.cpp  pybind.cpp
mujoco_extensions/policy_rollout/test/: test_policy_rollout.py
mujoco_extensions/system/: eigen_types.cpp  eigen_types.h  system_class.cpp  system_class.h  system_utils.cpp  system_utils.h
mujoco_extensions/system/test/: test_eigen_types.cpp  test_system.cpp
mujoco_extensions/test/: policy_inference.yml  test_locomotion.py
py-modindex/: index.html
quickstart/: index.html
run_mpc/: README.md
scripts/: repair_wheel.sh  upload_meshes.sh
search/: index.html
tests/: conftest.py  test_visualizer.py
tests/test_controller/: test_action_normalization.py  test_controller.py
tests/test_data/: test_controller_data.py  test_simulation_data.py
tests/test_simulation/: test_simulation.py
tests/test_tasks/: test_indexing.py  test_spot.py
(+380 files in other folders)
